--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2237,7 +2237,8 @@ Please check I have understood the intended command here*/
 "dark_mode_default_text" = "Défaut";
 
 /*Change person thumbnail*/
-"change_album_person_snackbar_text" = "";
-"change_album_person_error_text" = "";
-"change_person_photo" = "";
-"change_album_person_set_photo" = "";
+"change_album_person_snackbar_text" = "Photo de contact mise à jour avec succès";
+"change_album_person_error_text" = "Une erreur s'est produite lors de la modification de la photo du contact";
+"change_person_photo" = "Changer La Photo Du Contact";
+"change_album_person_set_photo" = "Utiliser comme photo de contact";
+"profile_recovery_mail_info" = "";
