--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1932,7 +1932,8 @@
 "dark_mode_default_text" = "Implicit";
 
 /*Change person thumbnail*/
-"change_album_person_snackbar_text" = "";
-"change_album_person_error_text" = "";
-"change_person_photo" = "";
-"change_album_person_set_photo" = "";
+"change_album_person_snackbar_text" = "Fotografia de contact a fost actualizată cu succes";
+"change_album_person_error_text" = "A apărut o eroare la modificarea fotografiei de contact";
+"change_person_photo" = "Schimbați Fotografia De Contact";
+"change_album_person_set_photo" = "Utilizați ca fotografie de contact";
+"profile_recovery_mail_info" = "";
