--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1936,4 +1936,4 @@
 "change_album_person_error_text" = "Beim Ändern des Kontaktfotos ist ein Fehler aufgetreten";
 "change_person_photo" = "Kontaktfoto Ändern";
 "change_album_person_set_photo" = "Als Kontaktfoto verwenden";
-"profile_recovery_mail_info" = "";
+"profile_recovery_mail_info" = "Die Wiederherstellungs-E-Mail wird nur für den Schritt zur Kontowiederherstellung verwendet, wenn Sie Ihr Passwort vergessen.";
