--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1986,4 +1986,4 @@
 "change_album_person_error_text" = "Error occurred while changing person photo";
 "change_person_photo" = "Change Person Photo";
 "change_album_person_set_photo" = "Use as person photo";
-"profile_recovery_mail_info" = "Şifrenizi unuttuğunuzda şifre kurtarma adımlarında kullanılacaktır.";
+"profile_recovery_mail_info" = "The recovery e-mail will only be used for the account recovery step when you forget your password.";
