--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1938,4 +1938,4 @@
 "change_album_person_error_text" = "Під час зміни фотографії контакту сталася помилка";
 "change_person_photo" = "Змінити Фотографію Контакту";
 "change_album_person_set_photo" = "Використовувати як фотографію контакту";
-"profile_recovery_mail_info" = "";
+"profile_recovery_mail_info" = "Електронна адреса для відновлення використовуватиметься лише для етапу відновлення облікового запису, якщо ви забудете свій пароль.";
