--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2241,4 +2241,4 @@ Please check I have understood the intended command here*/
 "change_album_person_error_text" = "Une erreur s'est produite lors de la modification de la photo du contact";
 "change_person_photo" = "Changer La Photo Du Contact";
 "change_album_person_set_photo" = "Utiliser comme photo de contact";
-"profile_recovery_mail_info" = "";
+"profile_recovery_mail_info" = "L'e-mail de récupération ne sera utilisé pour l'étape de récupération du compte que si vous oubliez votre mot de passe.";
