DE-12225 Signup flow updated

--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1960,3 +1960,4 @@
 "save_to_my_lifebox_same_account" = "";
 "save_to_my_lifebox_file_not_found" = "";
 "save_to_my_lifebox_folder_not_found" = "";
+"signup_enter_verification_code_email" = "";
