--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2251,3 +2251,4 @@ Please check I have understood the intended command here*/
 "save_to_my_lifebox_same_account" = "";
 "save_to_my_lifebox_file_not_found" = "";
 "save_to_my_lifebox_folder_not_found" = "";
+"signup_enter_verification_code_email" = "";
