--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1989,3 +1989,4 @@
 "save_to_my_lifebox_same_account" = "";
 "save_to_my_lifebox_file_not_found" = "";
 "save_to_my_lifebox_folder_not_found" = "";
+"signup_enter_verification_code_email" = "";
