DE-12287 Grace Info Banner

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1190,11 +1190,11 @@
 "digicel_feature_cancel_TT" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
 "digicel_feature_cancel_TC" = "يمكنكم إدارة وإلغاءعضوية lifebox من خلال تطبيق My Digicel.";
 "support_form_subject_1_detailed_info_label" = "لا أستطيع الدخول عن طريق استخدام البريد الإلكتروني";
-"support_form_subject_1_detailed_info_fulltext" = "";
+"support_form_subject_1_detailed_info_fulltext" = "<p><strong> إذا كنت من Turkcell </strong></p><p>i.\nإذا لم تتمكن من تسجيل الدخول بالبريد الإلكتروني، يمكنك الوصول إلى حسابك عن طريق إدخال كلمة المرور التي استخدمتها أثناء التسجيل مع رقم  هاتفك <br />ii. . إذا كنت تعتقد أنك أدخلت كلمة المرور و البريد الإلكتروني الخاصة بك بشكل صحيح ، ولكنك لا تزال غير قادر على تسجيل الدخول ؛ يمكنك تجديد كلمة المرور الخاصة بك باستخدام عملية نسيت كلمة المرور ومحاولة تسجيل الدخول مرة أخرى. .<br />iii. إذا كنت تأخذ تحذير البريد الإلكتروني / رقم الهاتف أو كلمة المرور غير صحيحة؛ يمكنك التحقق من بيانات البريد الإلكتروني ورقم الهاتف من ملفك الشخصي من خلال الوصول إلى حسابك باستخدام إجابة سؤال الأمان المحددة مسبقا أو البريد الإلكتروني المخصص للطوارئ بالإضافة إلى بيانات البريد الإلكتروني أو رقم الهاتف التي يمكنك التحقق منها. يمكنك تغيير بريدك الإلكتروني ، وليس رقم هاتفك. يظل كل رقم هاتف مرتبطا بحساب واحد فقط .</p><p><strong>إذا لم تكن منTurkcell: </strong></p><p>i. بعد تسجيل الدخول ، يمكنك تغيير رقم هاتفك من صفحة ملفك الشخصي. </p><p><strong>إذا لم تتمكن من الوصول إلى  الحل: </strong></p><p>i. إذا لم يكن رقم الهاتف مرتبطًا بالحساب ولم تقم بتسجيل الدخول لفترة طويلة (3 أشهر على الأقل) ، فقد يتم تعليق حسابك .<br /> ii.  في حالة التحويل ، يتم فصل رقم الهاتف عن الحساب المرتبط ومن المتوقع تحديد رقم هاتف جديد مع الإدخال الأول.";
 "support_form_subject_2_detailed_info_label" = "لا استطيع تسجيل الدخول باستخدام رقم الهاتف الخاص بي";
-"support_form_subject_2_detailed_info_fulltext" = "";
+"support_form_subject_2_detailed_info_fulltext" = "<p><strong>إذا كنت من تركسل:</strong></p><p>i. إذا لم تتمكن من تسجيل الدخول باستخدام رقم هاتفك ، فيمكنك الوصول إلى حسابك عن طريق إدخال كلمة المرور التي استخدمتها أثناء التسجيل باستخدام بريدك الإلكتروني .<br /> ii. إذا كنت تعتقد أنك أدخلت رقم هاتفك وكلمة المرور بشكل صحيح ، لكنك ما زلت لا تستطيع تسجيل الدخول ؛ يمكنك محاولة إعادة تعيين كلمة المرور الخاصة بك وتسجيل الدخول مرة أخرى باستخدام عملية نسيت كلمة المرور. <br /> iii. إذا كنت تتلقى بريدًا إلكترونيًا / رقم هاتف أو تحذيرًا بكلمة مرور غير صحيح ؛ يمكنك التحقق من بيانات بريدك الإلكتروني ورقم هاتفك من ملف التعريف الخاص بك عن طريق الوصول إلى حسابك باستخدام إجابة سؤال الأمان التي تم تعيينها مسبقًا أو البريد الإلكتروني للاسترداد بالإضافة إلى بيانات البريد الإلكتروني أو رقم الهاتف التي يمكنك التحقق منها. يمكنك تغيير بريدك الإلكتروني ، وليس رقم هاتفك. يظل كل رقم هاتف مرتبطًا بحساب واحد فقط .</p><p><strong> إذا لم تكن من تركسل :</strong></p><p>i. بعد تسجيل الدخول ، يمكنك تغيير رقم هاتفك من صفحة ملفك الشخصي.</p><p>&nbsp;<strong> إذا لم تتمكن من إيجاد الحل :</strong></p><p>i. إذا لم يكن رقم الهاتف مرتبطًا بالحساب ولم تقم بتسجيل الدخول لفترة طويلة (3 أشهر على الأقل) ، فقد يتم تعليق حسابك. <br /> ii. في حالة التحويل ، يتم فصل رقم الهاتف عن الحساب المرتبط ومن المتوقع تحديد رقم هاتف جديد مع الإدخال الأول.";
 "support_form_subject_3_detailed_info_label" = "لا استطيع الدخول باستخدام رقم الحماية الخاص بي";
-"support_form_subject_3_detailed_info_fulltext" = "";
+"support_form_subject_3_detailed_info_fulltext" = "i. إذا كنت تعتقد أن رقم هاتفك وبريدك الإلكتروني صحيحان ولا يمكنك تسجيل الدخول باستخدام كلمة المرور الخاصة بك ؛ يمكنك محاولة تسجيل الدخول مرة أخرى عن طريق تغيير كلمة المرور من خطوة نسيت كلمة المرور.\n\n</p><p><strong>إذا لم تتمكن من إيجاد الحل:</strong></p><p>i.إذا لم يكن رقم الهاتف مرتبطًا بالحساب ولم تقم بتسجيل الدخول لفترة طويلة (3 أشهر على الأقل) ، فقد يتم تعليق حسابك .<br /> ii. في حالة التحويل ، يتم فصل رقم الهاتف عن الحساب المرتبط ومن المتوقع تحديد رقم هاتف جديد مع الإدخال الأول.";
 "support_form_subject_4_detailed_info_label" = "نص الأمان غير متطابق";
 "support_form_subject_4_detailed_info_fulltext" = "تم عمل نص الحماية من أجل منع الهجوم الذي <p>-\nيمكن أن يحدث من قبل هجمات الالة على الحساب.\nيمكنك محاولة إدخال نص جديد من خلال تجديد.<br />- للنص,أو يمكنك تسجيل الدخول من خلال الاستماع إلى نص صوتي.\n إذا لم تكن قد توصلت إلى حل.</p><p><strong>\nإذا لم يكن لديك رقم هاتف مرفق:</strong></p><p>- بالحساب ولم تقم بتسجيل الدخول لفترة طويلة (على الأقل 3 أشهر) , فقد يكون حسابك قد تم تعليقه.\nفي حالات النقل, سوف يتم قطع اتصال رقم الهاتف .<br /> -\nالمتصل بالحساب,ويتوقع التعرف على رقم الهاتف الجديد مع أول تسجيل للدخول.";
 "support_form_subject_5_detailed_info_label" = "لا استطيع الدخول باستخدام رقم حماية تركسل";
@@ -1949,4 +1949,12 @@
 "change_person_photo" = "تغيير صورة جهة الاتصال";
 "change_album_person_set_photo" = "استخدم كصورة جهة اتصال";
 "profile_recovery_mail_info" = "لن يتم استخدام البريد الإلكتروني الخاص بالاسترداد إلا لخطوة استعادة الحساب إذا نسيت كلمة المرور الخاصة بك.";
-"account_can_not_change_password" = "";
+"account_can_not_change_password" = "لا يمكنك إعادة تعيين كلمة المرور الخاصة بك بسبب نقص المعلومات في حسابك";
+"signup_enter_verification_code_email" = "الرجاء إدخال رمز الأمان المكون من 6 أرقام الذي أرسلناه إلى عنوان البريد الإلكتروني هذا: %@";
+"grace_banner_text" = "نود أن نذكرك بأنه لا يمكن تجديد حزمة lifeebox الخاصة بك لأنه لا يمكن استلام دفعة بطاقة الائتمان. للاستمرار في تلقي خدمة lifebox دون انقطاع ، تحقق من معلومات الدفع الخاصة بك من خلال AppStore وقم بتحديثها إذا لزم الأمر.";
+"save_to_my_lifebox_success" = "";
+"save_to_my_lifebox_error" = "";
+"save_to_my_lifebox_multiprocess" = "";
+"save_to_my_lifebox_same_account" = "";
+"save_to_my_lifebox_file_not_found" = "";
+"save_to_my_lifebox_folder_not_found" = "";
