--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1988,3 +1988,11 @@
 "change_album_person_set_photo" = "Use as person photo";
 "profile_recovery_mail_info" = "The recovery e-mail will only be used for the account recovery step when you forget your password.";
 "account_can_not_change_password" = "You cannot change password due to lack of information at your account";
+"signup_enter_verification_code_email" = "Please enter 6-digit security code that we sent to this email: %@";
+"grace_banner_text" = "This is a kindly reminder that your lifebox package couldn’t be renewed due to the unsuccessful payment. To receive an uninterrupted lifebox service, please check your payment information via AppStore and update it if it is needed.";
+"save_to_my_lifebox_success" = "Files started to be saved in your account, you can view them under “All Files” menu shortly.";
+"save_to_my_lifebox_error" = "Failed to save files to your account. Please try again later.";
+"save_to_my_lifebox_multiprocess" = "You have an ongoing transaction. Please try again later.";
+"save_to_my_lifebox_same_account" = "Files are already backed up on your account. You can view them under “All Files” menu.";
+"save_to_my_lifebox_file_not_found" = "Files not found in the sharing link. Please contact the owner of the sharing in case of link expiration or deletion.";
+"save_to_my_lifebox_folder_not_found" = "No files in the folder.";
