--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2242,4 +2242,12 @@ Please check I have understood the intended command here*/
 "change_person_photo" = "Changer La Photo Du Contact";
 "change_album_person_set_photo" = "Utiliser comme photo de contact";
 "profile_recovery_mail_info" = "L'e-mail de récupération ne sera utilisé pour l'étape de récupération du compte que si vous oubliez votre mot de passe.";
-"account_can_not_change_password" = "";
+"account_can_not_change_password" = "Vous ne pouvez pas réinitialiser votre mot de passe en raison d'un manque d'informations dans votre compte";
+"signup_enter_verification_code_email" = "Veuillez saisir le code de sécurité à 6 chiffres que nous avons envoyé à cette adresse e-mail: %@";
+"grace_banner_text" = "Nous vous rappelons que votre forfait lifebox ne peut pas être renouvelé car le paiement par carte bancaire n'a pas pu être reçu. Pour continuer à bénéficier du service lifebox ininterrompu, vérifiez vos informations de paiement via l'AppStore et mettez-les à jour si nécessaire.";
+"save_to_my_lifebox_success" = "";
+"save_to_my_lifebox_error" = "";
+"save_to_my_lifebox_multiprocess" = "";
+"save_to_my_lifebox_same_account" = "";
+"save_to_my_lifebox_file_not_found" = "";
+"save_to_my_lifebox_folder_not_found" = "";
