--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1937,4 +1937,12 @@
 "change_person_photo" = "Schimbați Fotografia De Contact";
 "change_album_person_set_photo" = "Utilizați ca fotografie de contact";
 "profile_recovery_mail_info" = "E-mailul de recuperare va fi folosit doar pentru pasul de recuperare a contului dacă uitați parola.";
-"account_can_not_change_password" = "";
+"account_can_not_change_password" = "Nu vă puteți reseta parola din cauza lipsei de informații din contul dvs.";
+"signup_enter_verification_code_email" = "Vă rugăm să introduceți codul de securitate din 6 cifre pe care l-am trimis la această adresă de e-mail: %@";
+"grace_banner_text" = "Dorim să vă reamintim că pachetul dumneavoastră lifebox nu poate fi reînnoit deoarece plata cu cardul de credit nu a putut fi primită. Pentru a continua să primiți serviciul lifebox neîntrerupt, verificați informațiile de plată prin AppStore și actualizați-le dacă este necesar.";
+"save_to_my_lifebox_success" = "";
+"save_to_my_lifebox_error" = "";
+"save_to_my_lifebox_multiprocess" = "";
+"save_to_my_lifebox_same_account" = "";
+"save_to_my_lifebox_file_not_found" = "";
+"save_to_my_lifebox_folder_not_found" = "";
