--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1951,4 +1951,12 @@
 "change_person_photo" = "Изменить Фото Контакта";
 "change_album_person_set_photo" = "Использовать как фото контакта";
 "profile_recovery_mail_info" = "Это адрес электронный почты для использования только в случае восстановления пароля, если вы забудете свой пароль.";
-"account_can_not_change_password" = "";
+"account_can_not_change_password" = "Вы не можете изменить пароль из-за отсутствия информации в вашей учетной записи";
+"signup_enter_verification_code_email" = "Пожалуйста, введите 6-значный код безопасности, который мы отправили на этот адрес электронной почты: %@";
+"grace_banner_text" = "Напоминаем, что ваш пакет lifebox не может быть продлен, так как не удалось получить оплату с кредитной карты. Чтобы и дальше получать бесперебойное обслуживание lifebox, проверьте свою платежную информацию через AppStore и обновите ее, если это необходимо.";
+"save_to_my_lifebox_success" = "";
+"save_to_my_lifebox_error" = "";
+"save_to_my_lifebox_multiprocess" = "";
+"save_to_my_lifebox_same_account" = "";
+"save_to_my_lifebox_file_not_found" = "";
+"save_to_my_lifebox_folder_not_found" = "";
