--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1958,3 +1958,6 @@
 "save_to_my_lifebox_same_account" = "";
 "save_to_my_lifebox_file_not_found" = "";
 "save_to_my_lifebox_folder_not_found" = "";
+"grace_banner_title" = "";
+"grace_banner_desc" = "";
+"grace_expire_date" = "";
